--- a/lib/unbreakable_web/templates/page/index.html.eex
+++ b/lib/unbreakable_web/templates/page/index.html.eex
@@ -4,26 +4,34 @@
   <div class="text-5xl ml-64">-------------------------------------------</div>
   <p>(Consecutive days)</p>
   <table>
-    <tr class="text-3xl my-4 text-indigo-400">
+    <tr class="text-3xl text-purple-400">
       <td class="w-1/4">Live Streaming</td>
-      <td class="w-full pl-12"><div class="inline-block w-1/2 pl-4 bg-blue-400 text-white">32 </div></td>
+      <td class="w-full pl-12">
+        <div class="inline-block my-1 w-1/2 pl-4 bg-blue-400 rounded-r-md text-white">32 </div>
+      </td>
     </tr>
-    <tr class="text-3xl my-4 text-indigo-400">
+    <tr class="text-3xl text-purple-400">
       <td>Workout</td>
       <td class="w-full pl-12">
-        <div class="inline-block w-1/3 pl-4 bg-blue-400 text-white">8 </div>
+        <div class="inline-block my-1 w-1/3 pl-4 bg-blue-400 rounded-r-md text-white">8 </div>
       </td>
     </tr>
-    <tr class="text-3xl my-4 text-indigo-400">
+    <tr class="text-3xl text-purple-400">
       <td>Don't eat sugar</td>
       <td class="w-full pl-12">
-        <div class="inline-block w-1/6 pl-4 bg-blue-400 text-white">2 </div>
+        <div class="inline-block my-1 w-1/6 pl-4 bg-blue-400 rounded-r-md text-white">2 </div>
       </td>
     </tr>
-    <tr class="text-3xl my-4 text-indigo-400">
+    <tr class="text-3xl text-purple-400">
       <td>Sleep 8 Hours</td>
       <td class="w-full pl-12">
-        <div class="inline-block w-1/12 pl-4 bg-blue-400 text-white">1</div>
+        <div class="inline-block my-1 w-1/12 pl-4 bg-blue-400 rounded-r-md text-white">1</div>
+      </td>
+    </tr>
+    <tr class="text-3xl text-purple-400">
+      <td>Drink 2 ltr. water</td>
+      <td class="w-full pl-12">
+        <div class="inline-block my-1 w-full pl-4 bg-blue-400 rounded-r-md text-white">2048</div>
       </td>
     </tr>
   </table>
