--- a/lib/unbreakable_web/templates/status/index.html.eex
+++ b/lib/unbreakable_web/templates/status/index.html.eex
@@ -24,5 +24,6 @@
 <% end %>
   </tbody>
 </table>
-
 <span><%= link "New Status", to: Routes.status_path(@conn, :new) %></span>
+<br />
+<span><%= link "Current Goal", to: Routes.goal_path(@conn, :index) %></span>
