--- a/lib/unbreakable_web/templates/goal/index.html.eex
+++ b/lib/unbreakable_web/templates/goal/index.html.eex
@@ -1,15 +1,23 @@
-
+<h1 class="text-center text-6xl text-green-600">Your current Streaks</h1>
 <section class="row">
-  <hr class="my-8">
-  <p>(Consecutive days)</p>
+  <hr class="my-4" />
+  <p class="text-gray-700">(Consecutive days)</p>
   <table>
     <%= for goal <- @goals do %>
-    <tr class="text-3xl text-purple-400">
-      <td class="w-1/4"><%= goal.title%></td>
-      <td class="w-full pl-12">
-        <div class="inline-block my-1 pl-4 bg-blue-400 rounded-r-md text-white" style="<%= make_bar(goal) %>"><%= get_current_streak(goal) %> </div>
-      </td>
-    </tr>
+      <tr class="text-3xl text-purple-400">
+        <td class="w-1/4"><%= goal.title%></td>
+        <td class="w-full pl-12">
+          <div class="inline-block my-1 pl-4 bg-blue-400 rounded-r-md text-white" style="<%= make_bar(goal) %>">
+            <%= get_current_streak(goal) %>
+          </div>
+          <div class="inline-block ml-1 bg-purple-600 hover:bg-purple-500 text-white rounded-full w-9 text-center align-middle">
+            <a href="#">&#10003;</a>
+          </div>
+          <div class="inline-block ml-1 bg-red-500 hover:bg-red-600 text-white rounded-full w-9 text-center align-middle">
+            <a href="#">X</a>
+          </div>
+        </td>
+      </tr>
     <% end %>
   </table>
 </section>
