--- a/lib/unbreakable_web/templates/layout/app.html.eex
+++ b/lib/unbreakable_web/templates/layout/app.html.eex
@@ -8,19 +8,9 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body class="px-6">
-    <header>
-      <section class="container mt-6 ml-auto">
-        <nav role="navigation">
-          <ul>
-          </ul>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
-    </header>
-    <main role="main" class="container">
+  <body>
+    <%= render "header.html", assigns %>
+    <main role="main" class="px-6">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= @inner_content %>
